# spmfilter

./: .gitignore  .hgignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  configure  configure.ac  doxygen.cfg  spmfilter.conf.sample
cmake/Modules/: .FindGlib2.cmake.swp  FindCheck.cmake  FindDB4.cmake  FindEsmtp.cmake  FindEvent.cmake  FindGlib.cmake  FindGlib2.cmake  FindGmime.cmake  FindGzip.cmake  FindLdap.cmake  FindZdb.cmake  HgBuildInfo.cmake  SMFMacros.cmake  SetFindPaths.cmake
contrib/: spmfilter.spec  spmfilter_el5.spec
doc/: doxygen.cfg  install.dox  layout.xml  mainpage.dox  plugin.dox  tls.dox
doc/assets/: footer.html  header.html  install.dox  mainpage.dox  plugin.dox  stylesheet.css
man/: CMakeLists.txt  Makefile.am  Makefile.in  spmfilter.1  spmfilter.conf.5
scripts/: stm.py
src/: CMakeLists.txt  Makefile.am  Makefile.in  config.h  config.h.in  group_settings.c  ldap_lookup.c  libspmfilter.pc.in  lookup.c  lookup.h  lookup_result.c  lookup_result.h  mailconn.c  mailconn.h  main.c  message.c  pipe.c  platform.c  platform.h  settings.c  settings.h  smf_clist.c  smf_clist.h  smf_config.h  smf_core.c  smf_core.h  smf_daemon.c  smf_daemon.h  smf_daemon_scoreboard.c  smf_daemon_scoreboard.h  smf_db4_lookup.c  smf_dict.c  smf_dict.h  smf_email_address.c  smf_email_address.h  smf_envelope.c  smf_envelope.h  smf_group_settings.c  smf_header.c  smf_header.h  (+64 more)
test/: CMakeLists.txt  suite.c  test.h  test.h.cmake  test_core.c  test_db4.c  test_dict.c  test_ea.c  test_engine_pipe.c  test_engine_pipe_execute.c  test_envelope.c  test_header.c  test_internal.c  test_list.c  test_lookup_db4.c  test_lookup_ldap.c  test_lookup_sql.c  test_lookup_sqlite.c  test_message.c  test_modules.c  test_nexthop.c  test_params.h.cmake  test_part.c  test_pipe.c  test_session.c  test_settings.c  test_smtp.c  test_smtpd.c  testdirs.h.cmake  testmod1.c  testmod2.c
test/samples/: spmfilter.conf.cmake  test_lookup_sqlite.db
