AC_INIT(spmfilter, [0.3.0], ast@treibsand.com, spmfilter)
AC_CONFIG_AUX_DIR(buildtools)
AC_PREREQ(2.53)
AC_COPYRIGHT(GNU General Public License)
AM_INIT_AUTOMAKE([$PACKAGE_TARNAME], [$PACKAGE_VERSION])
AC_DEFINE(_GNU_SOURCE,'','Defined GNU SOURCE')
AM_ENABLE_SHARED(yes)
AC_PROG_CC
AM_PROG_LIBTOOL

PKG_CHECK_MODULES([glib],[glib-2.0 >= 2.0])
CFLAGS="$CFLAGS $glib_CFLAGS"
LDFLAGS="$LDFLAGS $glib_LIBS"
SPMFILTER_CHECK_MATH
SPMFILTER_CHECK_GLIB_VERSION
SPMFILTER_CHECK_GMIME
SPMFILTER_CHECK_ESMTP
SPMFILTER_QUEUE_CHECK
SPMFILTER_LIB_DIR
SPMFILTER_CHECK_ZDB
SPMFILTER_CHECK_LDAP

AC_SUBST(SPMFILTER_QUEUE_DIR)
AC_SUBST(GMIME24)
AC_SUBST(PKGCONFIG_GMIME)
AC_SUBST([LIBDIR], [${pkglibdir}])
AC_OUTPUT(Makefile src/Makefile src/spmfilter.h src/libspmfilter.pc man/Makefile)
